fixed css document tiles

--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -28,29 +28,29 @@
             <div flex="50" style="margin-right: 30px; ">
                 <span class="title">Download Documents</span>
                 <div class="documentTile">
-                    <div style="float:left;">
+                    <div style="float:left; padding:10px;">
                         <div class="header">Income Tax</div>
                         <div class="description">File Size: 1 mb</div>
                     </div>
-                    <div style="float: right;">
+                    <div style="float: right; border-left: solid 1px #e7ecf1;">
                         <img src="/assets/images/download.png"/>
                     </div>
                 </div>
                 <div class="documentTile">
-                    <div style="float:left;">
+                    <div style="float:left; padding:10px;">
                         <div class="header">Income Tax</div>
                         <div class="description">File Size: 1 mb</div>
                     </div>
-                    <div style="float: right;">
+                    <div style="float: right; border-left: solid 1px #e7ecf1;">
                         <img src="/assets/images/download.png"/>
                     </div>
                 </div>
                 <div class="documentTile">
-                    <div style="float:left;">
+                    <div style="float:left; padding:10px;">
                         <div class="header">Income Tax</div>
                         <div class="description">File Size: 1 mb</div>
                     </div>
-                    <div style="float: right;">
+                    <div style="float: right; border-left: solid 1px #e7ecf1;">
                         <img src="/assets/images/download.png"/>
                     </div>
                 </div>
