--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -57,6 +57,16 @@
             </div>
             <div flex="50">
                 <span class="title">Appointment Slots</span>
+                <div class="appointmentTile">
+                    <div style="float:left; padding:10px;">
+                        <div class="header">27th Oct 16, 07:20am</div>
+                        <a class="pending-btn ng-binding">PENDING</a>
+                    </div>
+                    <div style="float: right; border-left: solid 1px #e7ecf1;">
+                        <div class="actnItem">CONFIRM</div>
+                        <!-- <img src="/assets/images/download.png"/> -->
+                    </div>
+                </div>
             </div>
             </div>
             </div>
