--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -54,6 +54,10 @@
                         <img src="/assets/images/download.png"/>
                     </div>
                 </div>
+                <div style="margin-top:10px;">
+                    <md-button class="md-raised md-success" ng-click="">Select All</md-button>
+                    <md-button class="md-raised md-blue" ng-click="">Download All</md-button>
+                </div>
             </div>
             <div flex="50">
                 <span class="title">Appointment Slots</span>
@@ -64,7 +68,24 @@
                     </div>
                     <div style="float: right; border-left: solid 1px #e7ecf1;">
                         <div class="actnItem">CONFIRM</div>
-                        <!-- <img src="/assets/images/download.png"/> -->
+                    </div>
+                </div>
+                <div class="appointmentTile">
+                    <div style="float:left; padding:10px;">
+                        <div class="header">29th Oct 16, 07:20am</div>
+                        <a class="pending-btn ng-binding">PENDING</a>
+                    </div>
+                    <div style="float: right; border-left: solid 1px #e7ecf1;">
+                        <div class="actnItem">CONFIRM</div>
+                    </div>
+                </div>
+                <div class="appointmentTile">
+                    <div style="float:left; padding:10px;">
+                        <div class="header">28th Oct 16, 07:20am</div>
+                        <a class="pending-btn ng-binding">PENDING</a>
+                    </div>
+                    <div style="float: right; border-left: solid 1px #e7ecf1;">
+                        <div class="actnItem">DONE</div>
                     </div>
                 </div>
             </div>
