--- a/src/app/components/main/dashboard/dashboard.html
+++ b/src/app/components/main/dashboard/dashboard.html
@@ -2,13 +2,13 @@
 	<div class="left">
 		<div class="appointments">
 			<h2>Appointments</h2>
-			<div class="appointment" ng-repeat="appointment in vm.brokerAppointments">
+			<div class="appointment" ng-repeat="appointment in vm.brokerAppointments|orderBy:'-startTime'">
 				<div class="date">
-					<div style="font-size: 24px;">27th</div>
-					<div style="opacity: 0.4;padding: 4px; border-bottom: 1px dotted;">Oct 16</div>
-					<div style="font-size: 12px; opacity: 0.3;padding: 3px;">07:20 am</div>
+					<div style="font-size: 24px;">{{appointment.startTime | amParse:'DD/MM/YYYY hh:mm' | amDateFormat:'Do'}}</div>
+					<div style="opacity: 0.4;padding: 4px; border-bottom: 1px dotted;">{{appointment.startTime | amParse:'DD/MM/YYYY hh:mm' | amDateFormat:'MMM YY'}}</div>
+					<div style="font-size: 12px; opacity: 0.3;padding: 3px;">{{appointment.startTime | amParse:'DD/MM/YYYY hh:mm' | amDateFormat:'hh:mm a'}}</div>
 				</div>
-				<img style="height:50px; padding-left: 30px; padding-right: 20px;" src="/assets/images/standard-chartered.png">
+				<img style="width:120px;padding-right: 20px;align-self: flex-start;padding-left: 20px;" ng-src="/assets/images/partnerLogos/{{appointment.brokerageName}}.png">
 				<div class="detail">
 					<div style="font-size: 14px;margin-bottom: 3px;">{{appointment.brokerageName}}</div>
 					<div style="margin-bottom: 17px;opacity: 0.4;">{{appointment.meetingSubject}}</div>
@@ -32,17 +32,18 @@
 			</div>
 		</div>
 		<div class="messages">
-			<h2>New Messages</h2>
-			<div class="message" ng-repeat="message in vm.messages">
-				<img style="height:50px;padding-right: 20px;" src="/assets/images/standard-chartered.png">
+			<h2>Messages</h2>
+			<div class="message" ng-repeat="message in vm.messages | orderBy:'-messageDate' | limitTo: 3" ng-click="vm.openMessage(message)">
+				<img ng-if="message.avatar" style="width:120px;padding-right: 20px;align-self: flex-start;" ng-src="{{message.avatar}}">
+				<div class="avatar-circle" ng-if="!message.avatar">{{message.messageFrom|limitTo:1|capitalize}}</div>
 				<div class="detail">
 					<div>{{message.messageSubject}}</div>
 					<div style="font-size: 12px; margin-bottom: 10px;margin-top: 10px;">From: {{message.messageFromName}} ({{message.messageFrom}})</div>
 					<div style="opacity: 0.4;font-size: 14px; line-height: 25px;">{{message.messageContent}}</div>
 				</div>
 				<div class="time">
-					<div style="white-space: nowrap;padding-right: 10px" am-time-ago="message.messageDate | amParse:'YYYY-MM-DD'"></div>
-					<a style="text-decoration: none;cursor: pointer;" ng-click="vm.openMessage(message)">
+					<div style="white-space: nowrap;padding-right: 10px" am-time-ago="message.messageDate | amParse:'DD/MM/YYYY hh:mm'"></div>
+					<a style="text-decoration: none;cursor: pointer;">
 						<img src="/assets/images/open-message.png">					
 					</a>
 				</div>
@@ -58,11 +59,12 @@
 			<h2>Brokerage Applications</h2>
 			<div class="brokerage-item" ng-repeat="application in vm.brokerageApplications">
 				<div class="broker-logo">
-					<img src="/assets/images/posb.png">
+					<img style="width: 60px;" ng-src="/assets/images/partnerLogos/{{application.brokerageId}}.png">
 
 				</div>
 				<div class="detail">
 					{{application.brokerageId}}
+					<div style="margin-top: 5px;" am-time-ago="application.startDate | amParse:'YYYY-MM-DD'"></div>
 					<a class="pending-btn" style="margin-top: 10px;">{{application.applicationStatus}}</a>
 				</div>				
 			</div>
@@ -75,7 +77,11 @@
 			<h2>Brokerage Application Request</h2>
 			<div class="appointments-container">
 				<div class="appointment" ng-repeat="appointment in vm.userAppointments">
-					<img src="/assets/images/alvaro.png" style="height: 40px; width:40px;">			
+					<img ng-if="appointment.avatar" style="width:120px;padding-right: 20px;align-self: flex-start;" ng-src="{{message.avatar}}">
+					<div class="avatar-circle" ng-if="!appointment.avatar">
+						{{appointment.fname|limitTo:1|capitalize}}
+						{{appointment.lname|limitTo:1|capitalize}}
+					</div>
 					<div class="detail">
 						<div style="font-size: 14px;">{{appointment.fname}} {{appointment.lname}}</div>
 						<div style="margin-top: 3px;opacity: 0.4;">3 Days Ago</div>
@@ -85,17 +91,18 @@
 			</div>
 		</div>
 		<div class="messages">
-			<h2>New Messages</h2>
-			<div class="message" ng-repeat="message in vm.messages">
-				<img style="height:50px;padding-right: 20px;" src="/assets/images/standard-chartered.png">
+			<h2>Messages</h2>
+			<div class="message" ng-repeat="message in vm.messages | orderBy:'-messageDate' | limitTo: 3" ng-click="vm.openMessage(message)">
+				<img ng-if="message.avatar" style="width:120px;padding-right: 20px;align-self: flex-start;" ng-src="{{message.avatar}}">
+				<div class="avatar-circle" ng-if="!message.avatar">{{message.messageFrom|limitTo:1|capitalize}}</div>
 				<div class="detail">
 					<div>{{message.messageSubject}}</div>
 					<div style="font-size: 12px; margin-bottom: 10px;margin-top: 10px;">From: {{message.messageFromName}} ({{message.messageFrom}})</div>
 					<div style="opacity: 0.4;font-size: 14px; line-height: 25px;">{{message.messageContent}}</div>
 				</div>
 				<div class="time">
-					<div style="white-space: nowrap;padding-right: 10px" am-time-ago="message.messageDate | amParse:'YYYY-MM-DD'"></div>
-					<a style="text-decoration: none;cursor: pointer;" ng-click="vm.openMessage(message)">
+					<div style="white-space: nowrap;padding-right: 10px" am-time-ago="message.messageDate | amParse:'DD/MM/YYYY hh:mm'"></div>
+					<a style="text-decoration: none;cursor: pointer;">
 						<img src="/assets/images/open-message.png">					
 					</a>
 				</div>
@@ -108,7 +115,11 @@
 		<div class="appointments">
 			<h2 style="color:white;">Appointment Slots</h2>		
 			<div class="appointment" ng-repeat="appointment in vm.brokerAppointments">
-				<img src="/assets/images/alvaro.png" style="height: 40px; width:40px;">			
+				<img ng-if="appointment.avatar" style="width:120px;padding-right: 20px;align-self: flex-start;" ng-src="{{message.avatar}}">
+				<div class="avatar-circle" ng-if="!appointment.avatar">
+						{{appointment.userFirstName|limitTo:1|capitalize}}
+						{{appointment.userLastName|limitTo:1|capitalize}}
+				</div>
 				<div class="detail">
 					<div style="font-size: 14px;">{{appointment.userFirstName}} {{appointment.userLastName}}</div>
 					<div style="opacity: 0.4; margin-top: 3px;">{{appointment.displayTime}}</div>
