--- a/src/app/components/main/messages/messages.scss
+++ b/src/app/components/main/messages/messages.scss
@@ -52,6 +52,7 @@
 		.inbox,.sent {
 			.message {
 				display: flex;
+				outline:none;
 				padding: 30px;
 				padding-right: 20px;
 				margin-top: 20px;
