--- a/src/app/components/main/messages/sent.html
+++ b/src/app/components/main/messages/sent.html
@@ -1,15 +1,17 @@
 <div class="inbox">
-	<div ng-class="{message: true, active:messageView.activeSentMessage.messageId == message.messageId}" ng-repeat="message in vm.messages">
-		<img style="height:50px;padding-right: 20px;" src="/assets/images/standard-chartered.png">
+	<div ng-class="{message: true, active:messageView.activeSentMessage.messageId == message.messageId}" ng-repeat="message in vm.messages|orderBy:'-messageDate' | limitTo:5" 
+	ng-click="vm.openMessage(message)">
+		<img ng-if="message.avatar" style="width:120px;padding-right: 20px;align-self: flex-start;" ng-src="{{message.avatar}}">
+		<div class="avatar-circle" ng-if="!message.avatar">{{message.messageToName|limitTo:1|capitalize}}</div>
 		<div class="detail">
 			<div>{{message.messageSubject}}</div>
 			<div style="font-size: 12px; margin-bottom: 10px;margin-top: 10px;">To: {{message.messageToName}} ({{message.messageToEmail}})</div>
 			<div style="opacity: 0.4;font-size: 14px; line-height: 25px;">{{message.messageContent}}</div>
 		</div>
 		<div class="time">
-			<div style="white-space: nowrap;padding-right: 10px" am-time-ago="message.messageDate | amParse:'YYYY-MM-DD'"></div>
+			<div style="white-space: nowrap;padding-right: 10px" am-time-ago="message.messageDate | amParse:'DD/MM/YYYY hh:mm'"></div>
 			<a style="text-decoration: none;cursor: pointer;">
-				<img src="/assets/images/open-message.png" style="outline: none;" ng-click="vm.openMessage(message)">					
+				<img src="/assets/images/open-message.png" style="outline: none;">					
 			</a>
 		</div>
 	</div>
