fix slots colors

--- a/src/app/components/main/calendar/calendar.scss
+++ b/src/app/components/main/calendar/calendar.scss
@@ -8,6 +8,11 @@ md-event-calendar.md-event-calendar-cell-event {
 .md-stepper-indicator.md-completed md-stepper-indicator-wrapper {
 	background: #fbfbfb;
 }
+md-event-calendar .md-event-calendar-cell-event {
+	background-color: #3aafa5;
+	color: white;	
+}
+/*
 md-event-calendar .md-event-calendar-cell-event.pending {
 	background-color: rgb(63, 81, 181);
 	background-color: #3aafa5;
@@ -23,6 +28,7 @@ md-event-calendar .md-event-calendar-cell-event.rejected {
 	background-color: #3aafa5;
 	color: white;
 }
+*/
 .md-dialog-content-body{
 	padding-top:12px;
 }
