1. Adding KYC directive and services 2. Adding Profile directive and services

--- a/src/app/components/main/settings/change-password.html
+++ b/src/app/components/main/settings/change-password.html
@@ -1,13 +1,13 @@
 <form name="changePassword">
-	<div class=".cpinput">
+	<div class="cpinput">
 		<label for="current">Current Password</label>
 		<input name="current" placeholder="Current Password" type="password">
 	</div>
-	<div class=".cpinput">
+	<div class="cpinput">
 		<label for="new">New Password</label>
 		<input name="new" placeholder="New Password (min 8 char)" type="password">
 	</div>
-	<div class=".cpinput">
+	<div class="cpinput">
 		<label for="confirm">Confirm Password</label>
 		<input name="confirm" placeholder="Confirm Password" type="password">
 	</div>
