--- a/src/app/components/main/dashboard/dashboard.html
+++ b/src/app/components/main/dashboard/dashboard.html
@@ -122,7 +122,7 @@
 				</div>
 				<div class="detail">
 					<div style="font-size: 14px;">{{appointment.userFirstName}} {{appointment.userLastName}}</div>
-					<div style="opacity: 0.4; margin-top: 3px;">{{appointment.displayTime}}</div>
+					<div style="opacity: 0.4; margin-top: 3px;font-size: 13px;">{{appointment.displayTime}}</div>
 					<a class="conference-btn">Start Conference</a>
 				</div>
 			</div>
