--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -118,248 +118,14 @@
             <div ng-if="!isBroker || isBroker">
                 <md-step md-label="Personal Details">
                     <md-step-body>
-                        <form name="personalDetailsForm" class="detailsForm">
-                            <div layout="row">
-                                <div flex="50" class="col" style="margin-left:30px;">
-                                    <md-input-container class="md-block" flex-gt-sm>
-                                        <label>First name</label>
-                                        <input required ng-model="user.firstName" name="firstName" minlength="6" maxlength="100">
-
-                                        <div ng-messages="personalDetailsForm.firstName.$error" role="alert">
-                                            <div ng-message-exp="['required', 'minlength', 'maxlength']">
-                                                Please enter a name between 6 and 100 characters.
-                                            </div>
-                                        </div>
-                                    </md-input-container>
-                                </div>
-                                <div flex="50" class="col" style="margin-right:30px;">
-                                    <md-input-container class="md-block" flex-gt-sm>
-                                        <label>Last name</label>
-                                        <input required ng-model="user.lastName" name="lastName" minlength="6" maxlength="100">
-                                        <div ng-messages="personalDetailsForm.lastName.$error" role="alert">
-                                            <div ng-message-exp="['required', 'minlength', 'maxlength']">
-                                                Please enter the last name between 6 and 100 characters.
-                                            </div>
-                                        </div>
-                                    </md-input-container>
-                                </div>
-                            </div>
-
-                            <div layout="row" style="margin-top:0px;">
-                                <div flex="50" class="col" style="margin-left:30px;">
-                                    <md-input-container class="md-block" flex="30" style="float:left;">
-                                        <label>Country Code</label>
-                                        <input required ng-model="user.countryCode" minlength="6" maxlength="100">
-                                    </md-input-container>
-                                    <md-input-container class="md-block" flex="100" flex-offset="10" style="float:left;">
-                                        <label>Hand Phone</label>
-                                        <input required ng-model="user.phoneNum" minlength="6" maxlength="100">
-                                    </md-input-container>
-                                </div>
-                                <div flex="50" class="col" style="margin-right:30px;">
-                                    <md-input-container class="md-block" flex-gt-sm>
-                                        <label>Email ID</label>
-                                        <input required type="email" name="email" ng-model="user.email" minlength="10" maxlength="100" ng-pattern="/^.+@.+\..+$/" />
-
-                                        <div ng-messages="personalDetailsForm.email.$error" role="alert">
-                                            <div ng-message-exp="['required', 'minlength', 'maxlength', 'pattern']">
-                                                Please enter a valid email Id.
-                                            </div>
-                                        </div>
-                                    </md-input-container>
-                                </div>
-                            </div>
-
-                            <div layout="row" style="margin-top:0px;">
-                                <div flex="50" class="col" style="margin-left:30px;">
-                                    <md-input-container class="md-block" flex="30" style="float:left;">
-                                        <label>Country Code</label>
-                                        <input required ng-model="user.countryCode" minlength="6" maxlength="100">
-                                    </md-input-container>
-                                    <md-input-container class="md-block" flex="100" flex-offset="10" style="float:left;">
-                                        <label>Residence Phone</label>
-                                        <input required ng-model="vm.questionsmap.residential_phone.answerText" minlength="6" maxlength="100">
-                                    </md-input-container>
-
-                                </div>
-                                <div flex="50" class="col" style="margin-right:30px;">
-                                    <md-input-container style="margin-left: -16px;margin-top: 0px;">
-                                        <label>Date of Birth</label>
-                                        <md-datepicker ng-model="vm.questionsmap.user_dob.answerText"></md-datepicker>
-                                    </md-input-container>
-                                    <md-input-container class="md-block" flex-gt-sm>
-                                        <label>Nationality</label>
-                                        <md-select ng-model="vm.questionsmap.nationality.answerText">
-                                            <md-option><em>Singapore</em></md-option>
-                                            <md-option ng-repeat="country in vm.countries" ng-value="country.name">
-                                                {{country.name}}
-                                            </md-option>
-                                        </md-select>
-                                    </md-input-container>
-                                </div>
-                            </div>
-
-                            <div layout="row">
-                                <div flex="50" class="col" style="margin-left:30px;">
-                                    <md-input-container class="md-block">
-                                        <label>Residential Address</label>
-                                        <textarea ng-model='vm.questionsmap.residential_address.answerText' rows="2"></textarea>
-                                    </md-input-container>
-                                </div>
-                                <div flex="50" class="col" style="margin-right:30px;">
-                                    <md-input-container class="md-block">
-                                        <label>Mailing Address</label>
-                                        <textarea ng-model='vm.questionsmap.mailing_address.answerText' rows="2"></textarea>
-                                    </md-input-container>
-                                </div>
-                            </div>
-
-                            <div layout="row">
-                                <div flex="50" class="col" style="margin-left:30px;">
-                                    <md-input-container class="md-block">
-                                        <label>Passport Number</label>
-                                        <input required ng-model="vm.questionsmap.passport_nric.answerText" minlength="6" maxlength="100">
-                                    </md-input-container>
-                                </div>
-                                <div flex="50" class="col" style="margin-right:30px;">
-                                    <md-input-container class="md-block">
-                                        <label>Employment Status</label>
-                                        <md-select ng-model="vm.questionsmap.employment_status.answerId">
-                                            <md-option ng-repeat="empstatus in vm.empStatuses" ng-value="empstatus.name">
-                                                {{empstatus.name}}
-                                            </md-option>
-                                        </md-select>
-                                    </md-input-container>
-                                </div>
-                            </div>
-                        </form>
-
+                        <profile-form />
                     </md-step-body>
                 </md-step>
             </div>
             <div ng-if="!isBroker || isBroker">
                 <md-step md-label="KYC">
                     <md-step-body>
-                        <form name="kycDetailsForm" class="detailsForm">
-                            <div layout="row">
-                                <div flex="50" class="col" style="margin-left:30px;">
-                                    <md-input-container class="md-block" flex-gt-sm>
-                                        <label>Tax Residence</label>
-                                        <input required ng-model="vm.kycquestions['Tax Residence'].answerText" name="taxResidence" minlength="6" maxlength="100">
-
-                                        <div ng-messages="kycDetailsForm.taxResidence.$error" role="alert">
-                                            <div ng-message-exp="['required', 'minlength', 'maxlength']">
-                                                Please enter a valid tax residence.
-                                            </div>
-                                        </div>
-                                    </md-input-container>
-                                </div>
-                                <div flex="50" class="col" style="margin-right:30px;">
-                                    <md-input-container class="md-block" flex="30" style="float:left;">
-                                        <label>Currency</label>
-                                        <md-select ng-model="currency">
-                                            <md-option ng-repeat="currency in vm.currencies" ng-value="currency.name">
-                                                {{currency.name}}
-                                            </md-option>
-                                        </md-select>
-                                    </md-input-container>                                
-                                    <md-input-container class="md-block" flex="100" flex-offset="10" style="float:left;">
-                                        <label>Annual Income</label>
-                                        <input required ng-model="vm.kycquestions['Annual Income'].answerText" minlength="6" maxlength="100">
-                                    </md-input-container>
-                                </div>
-                            </div>
-
-                            <div layout="row" style="margin-top:0px;">
-                                <div flex="50" class="col" style="margin-left:30px;">
-                                    <md-input-container class="md-block" flex-gt-sm>
-                                        <label>Source of Wealth</label>
-                                        <input required ng-model="vm.kycquestions['Source of Wealth'].answerText" name="sourceWealth" minlength="6" maxlength="100">
-                                    </md-input-container>
-                                </div>
-                                <div flex="50" class="col" style="margin-left:30px;">
-                                    <md-input-container class="md-block" flex-gt-sm>
-                                        <label>Source of Fund</label>
-                                        <input required ng-model="vm.kycquestions['Source of Funds'].answerText" name="sourceFund" minlength="6" maxlength="100">
-                                    </md-input-container>
-                                </div>
-                            </div>
-
-                            <div layout="row" style="margin-top:0px;">
-                                <div flex="50" class="col" style="margin-left:30px;">
-                                    <md-input-container class="md-block" flex-gt-sm>
-                                        <label>Estimated Liquid Assets</label>
-                                        <input required ng-model="vm.kycquestions['Estimated Liquid Assets'].answerText" name="estimatedLiquidAssets" minlength="6" maxlength="100">
-                                    </md-input-container>
-                                </div>
-                                <div flex="50" class="col" style="margin-left:30px;">
-                                    <md-input-container class="md-block" flex-gt-sm>
-                                        <label>Investment Objectives</label>
-                                        <input required ng-model="vm.kycquestions['Investment Objectives'].answerText" name="investigationObjectives" minlength="6" maxlength="100">
-                                    </md-input-container>
-                                </div>
-                            </div>
-
-                            <div layout="row" style="margin-top:0px;">
-                                <div flex="50" class="col" style="margin-left:30px;">
-                                    <md-input-container class="md-block" flex-gt-sm>
-                                        <label>Likely frequency of Trades</label>
-                                        <input required ng-model="vm.kycquestions['Likely frequency of Trades'].answerText" name="likelyFrequency" minlength="6" maxlength="100">
-                                    </md-input-container>
-                                </div>
-                                <div flex="50" class="col" style="margin-left:30px;">
-                                    <md-input-container class="md-block" flex-gt-sm>
-                                        <label>Bank Reference</label>
-                                        <input required ng-model="vm.kycquestions['Bank Reference'].answerText" name="bankRef" minlength="6" maxlength="100">
-                                    </md-input-container>
-                                </div>
-                            </div>
-
-                            <div layout="row" style="margin-top:0px;">
-                                <div flex="50" class="col" style="margin-left:30px;">
-                                    <md-input-container class="md-block" flex-gt-sm>
-                                        <label>Bank account number</label>
-                                        <input required ng-model="vm.kycquestions['Bank Account Number'].answerText" name="bankAcc" minlength="6" maxlength="100">
-                                    </md-input-container>
-                                </div>
-                                <div flex="50" class="col" style="margin-left:30px;">
-                                    <md-input-container class="md-block" flex-gt-sm>
-                                        <label>Language Proficiency</label>
-                                        <input required ng-model="vm.kycquestions['Language Proficiency'].answerText" name="languagePro" minlength="6" maxlength="100">
-                                    </md-input-container>
-                                </div>
-                            </div>
-
-                            <div layout="row" style="margin-top:0px;">
-                                <div flex="50" class="col" style="margin-left:30px;">
-                                    <md-input-container class="md-block" flex-gt-sm>
-                                        <label>Academic Qualification</label>
-                                        <input required ng-model="vm.kycquestions['Academic Qualification'].answerText" name="academicQualification" minlength="6" maxlength="100">
-                                    </md-input-container>
-                                </div>
-                                <div flex="50" class="col" style="margin-left:30px;">
-                                    <md-input-container class="md-block" flex-gt-sm>
-                                        <label>Mother's Maiden Name</label>
-                                        <input required ng-model="vm.kycquestions['Mother\'s Maiden Name'].answerText" name="motherMaidenName" minlength="6" maxlength="100">
-                                    </md-input-container>
-                                </div>
-                            </div>
-
-                            <div layout="row" style="margin-top:0px;">
-                                <div flex="50" class="col" style="margin-left:30px;">
-                                    <md-input-container class="md-block" flex-gt-sm>
-                                        <label>Name of Spouse</label>
-                                        <input ng-model="vm.kycquestions['Name of Spouse'].answerText" name="spouseName" minlength="6" maxlength="100">
-                                    </md-input-container>
-                                </div>
-                                <div flex="50" class="col" style="margin-left:30px;">
-                                    <md-input-container class="md-block" flex-gt-sm>
-                                        <label>Spouse’s Passport / NRIC Number</label>
-                                        <input ng-model="vm.kycquestions['Spouse passport / NRIC number'].answerText" name="spousePassport" minlength="6" maxlength="100">
-                                    </md-input-container>
-                                </div>
-                            </div>
-                        </form>
+                        <kyc-form />
                     </md-step-body>
                 </md-step>
             </div>
