fixed order; and name clickable on toolbar nwo

--- a/src/app/components/main/toolbar/toolbar.html
+++ b/src/app/components/main/toolbar/toolbar.html
@@ -25,7 +25,7 @@
 
 	</div>
 	<div class="avatar-area">
-		<div style="margin-right: 4px;">{{vm.displayName}}</div>
+		<div style="padding: 15px; cursor: pointer; padding-right: 5px;" ui-sref="main.settings.profile">{{vm.displayName}}</div>
 		<a class="avatar-circle" ui-sref="main.settings.profile" ng-if="!message.avatar">{{vm.avatarName}}</a>		
 		<a ng-click="vm.signOut()" style="cursor: pointer;" title="Logout">
 			<img style="height: 35px;" src="/assets/images/logout.svg" alt="Logout">
