--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -344,3 +344,32 @@ md-event-calendar .md-event-calendar-cell-event.book-appointment {
 	text-align: center;
 	margin: 0 auto;
 }
+
+.ticked {
+	background: url(../../../../assets/images/ticked.png) no-repeat;
+    outline: none;
+    height: 34px;
+    width:34px;
+    padding: 5px;
+    float: left;
+    margin-right: 5px;
+    background-size: 34px;
+    &.grey {
+    	background: url(../../../../assets/images/tickedgrey.png) no-repeat;
+	    background-size: 34px;
+    }
+}
+
+.unticked {
+	background: url(../../../../assets/images/unticked.png) no-repeat;	
+    outline: none;
+    height: 34px;
+    width:34px;
+    padding: 5px;
+    float: left;
+    background-size: 34px;
+    &.grey {
+		background: url(../../../../assets/images/untickedgrey.png) no-repeat;
+ 	    background-size: 34px;
+    }
+}
