--- a/src/app/components/main/settings/settings.html
+++ b/src/app/components/main/settings/settings.html
@@ -9,6 +9,6 @@
 	</div>
 	<div class="bottom">
 		<a class="cancel-btn">Cancel</a>
-		<a class="save-btn">Save</a>
+		<a class="save-btn" ng-click="vm.save()">Save</a>
 	</div>
 </div>
