Reversing div removal

--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -90,6 +90,7 @@
                 </div>
             </div>
             </div>
+            </div>
             </md-step-body>
         </md-step>
         </div>
